Se agrega lo que falta
